# OctoScan

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  cliff.toml
.githooks/: pre-commit
.github/skills/add-scanner/: SKILL.md
.github/skills/scanner-tests/: SKILL.md
.github/skills/scanner-tests-cli/: SKILL.md
.github/workflows/: ci.yml  dev.yml  release.yml
src/: app.rs  cli.rs  export.rs  installer.rs  logger.rs  main.rs  profiles.rs  tui.rs  ui.rs
src/scanners/: feroxbuster.rs  httpx.rs  hydra.rs  mod.rs  nmap.rs  nuclei.rs  sqlmap.rs  subfinder.rs  wpscan.rs  zap.rs
tests/: cli_integration.rs
tests/fixtures/feroxbuster/: filtered.jsonl  normal.jsonl
tests/fixtures/httpx/: malformed.jsonl  normal.jsonl
tests/fixtures/hydra/: empty.txt  multi_service.txt  normal.txt
tests/fixtures/nmap/: empty.txt  normal.txt  vuln.txt
tests/fixtures/nuclei/: malformed.jsonl  normal.jsonl
tests/fixtures/sqlmap/: empty.txt  normal.txt  union_and_dump.txt
tests/fixtures/subfinder/: normal.txt
tests/fixtures/wpscan/: empty.json  normal.json  vulnerable.json
tests/fixtures/zap/: alerts.json  normal.xml  text.txt
