[package]
name = "octoscan"
version = "0.1.0"
edition = "2021"
description = "CLI security auditing tool orchestrating Nmap, Nuclei, ZAP and more"
license = "MIT"

[dependencies]
# TUI
ratatui = "0.30"
crossterm = "0.28"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Date/time
chrono = { version = "0.4", features = ["serde"] }

# Error handling
anyhow = "1"

# Logging
log = "0.4"

# UUID for scan IDs
uuid = { version = "1", features = ["v4"] }
